Update date for 0.0.90
git-archimport-id: tsui.tony@gmail.com--projects/guppy--release--0.0.90--patch-1

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-guppy-0.0.90: ? Feb 2006
+guppy-0.0.90: 7 Feb 2006
 	- New file management features
 	     o Delete files/directories
 	     o Rename files/directories
