Update NEWS file for 0.0.92
git-archimport-id: tsui.tony@gmail.com--projects/guppy--dev--0.0.1--patch-152

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,9 @@
-guppy-0.0.92: 
+guppy-0.0.92: 17 April 2006
 	- Add application icon
 	- Fix freeze when scrolling during a transfer
 	- Various fixes to update user interface after deleting files.
+	- Connect ESC key to exit from PC/PVR path entry
+	- Connect Shift+Delete to delete without confirmation
 
 guppy-0.0.91: 23 March 2006
 	- New icons for REC/MP3/TAP files
