--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+guppy-1.0.1: 26 May 2006
+	- Support creation of Debian packages.
+	- Update HAL scripts for Fedora Core 6.
+	- Handle Python version number with non-numeric characters, like in
+	  Ubuntu Edgy.
+
 guppy-1.0.0: 26 May 2006
 	- Add HAL fdi and script to change permission of /proc/bus/usb/...
 	  file so Guppy can be used by non-root users on Fedora Core.
