Catch locale.Error exception raised when locale is not supported in distro.
git-archimport-id: tsui.tony@gmail.com--projects/guppy--release--1.0.1--patch-25

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ guppy-1.0.1: 15 Jan 2007
 	  Ubuntu Edgy.
 	- Handle when Puppy fails to read a directory.
 	- Speed up start up by not caching contents of the MP3 directory.
+	- Catch exception when locale is not supported.
 
 guppy-1.0.0: 26 May 2006
 	- Add HAL fdi and script to change permission of /proc/bus/usb/...
