--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+guppy-1.0.2: 15 June 2007
+	- Fix "no encoding declared" error (Alexander Keusch)
+
 guppy-1.0.1: 15 Jan 2007
 	- Support creation of Debian packages.
 	- Update HAL scripts for Fedora Core 6.
